--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue2-shop-lesson",
+  "name": "TakyMall",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "worldsong <2060884089@qq.com>",
